[package]
name = "cc-quick-commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "^2"
cc-core = { git = "https://github.com/computingfun-org/cc-core.git" }
open = "^5"
cli-clipboard = "^0"
egui = "^0"
eframe = "^0"
device_query = "^1"
egui-winit = "^0"
